# zexio-agent

./: .gitignore  API.md  API_WORKER_REGISTRATION.md  CHANGELOG.md  Caddyfile  Cargo.toml  Cross.toml  DEPLOYMENT.md  ENV_VARS.md  FEATURES.md  LICENSE  NOTICE  README.md  ROUTES.md  SETUP.md  SYNC_FLOW.md  SYNC_STATUS.md  WORKER_API.md  app@.service  config.yaml  identity.json  init.sh  install.sh  worker.service  zexio-agent.service
.github/workflows/: build-plane.yaml  ci.yml  release.yml
core/: CONFIG.md  Cargo.toml  ROUTES.md  build.rs  build_log.txt  build_log_2.txt  identity.json  install.sh  master.key.sample
core/proto/: node_sync.proto
core/src/: caddy.rs  config.rs  crypto.rs  daemon.rs  deploy.rs  diagnose.rs  errors.rs  main.rs  middleware.rs  monitor.rs  project.rs  registration.rs  server.rs  services.rs  state.rs  storage.rs  streams.rs  tunnel.rs
core/src/mesh/: firewall.rs  mod.rs  proxy.rs  tunnel.rs  zexio_mesh.rs
gui/: package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
gui/src/: App.css  App.tsx  index.css
gui/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: lib.rs
gui/src/components/: CloudAuthForm.tsx  Footer.tsx  Header.tsx  LogoBrand.tsx  ModeSelector.tsx  OnboardingScreen.tsx  SettingsPanel.tsx  StandaloneConfig.tsx  StatusCard.tsx  SystemStats.tsx  TunnelControl.tsx  TunnelStats.tsx  TunnelToggle.tsx
gui/src/components/ui/: button.tsx  card.tsx  resizable.tsx
migrations/: 20240101000000_init.sql
src/: auth.rs  caddy.rs  config.rs  crypto.rs  db.rs  deploy.rs  errors.rs  main.rs  middleware.rs  monitor.rs  project.rs  registration.rs  server.rs  services.rs  state.rs  storage.rs  streams.rs  tunnel.rs
src/mesh/: firewall.rs  mod.rs  proxy.rs  zexio_mesh.rs
