[package]
name = "plane"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
axum = { version = "0.7", features = ["macros", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "uuid", "time"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
trust-dns-resolver = "0.23"
hmac = "0.12"
sha2 = "0.10"
aes-gcm = "0.10"
hkdf = "0.12"
rand = "0.8"
hex = "0.4"
config = "0.13"
tokio-stream = { version = "0.1", features = ["net", "io-util"] }
futures = "0.3"
async-stream = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sysinfo = "0.30"
anyhow = "1.0"
thiserror = "1.0"
tower-http = { version = "0.5", features = ["trace", "cors"] }
zip = "0.6"
base64 = "0.21"
uuid = { version = "1.7", features = ["v4", "serde"] }
crc32fast = "1.3"

[dev-dependencies]
tempfile = "3.10"
