[package]
name = "zexio_agent"
version = "0.2.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
axum = { version = "0.7", features = ["macros", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls"] }
trust-dns-resolver = "0.23"
hmac = "0.12.1"
sha2 = "0.10"
aes-gcm = "0.10"
hkdf = "0.12"
rand = "0.8"
hex = "0.4"
hostname = "0.3"

config = "0.13"
tokio-stream = { version = "0.1", features = ["net", "io-util"] }
futures = "0.3"
async-stream = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sysinfo = "0.30"
anyhow = "1.0"
thiserror = "1.0"
tower-http = { version = "0.5", features = ["trace", "cors"] }
hyper-util = { version = "0.1", features = ["full", "client-legacy"] }
hyper = { version = "1.0", features = ["full"] }
tower = "0.4"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
base64 = "0.21"
uuid = { version = "1.7", features = ["v4", "serde"] }
crc32fast = "1.3"
chrono = { version = "0.4", features = ["serde"] }
redis = { version = "0.24", features = ["tokio-comp"] }
jsonwebtoken = "9.2"
validator = { version = "0.16", features = ["derive"] }

pingora = { version = "0.1", features = ["proxy", "lb"] }
async-trait = "0.1"
[dev-dependencies]
tempfile = "3.10"
