[package]
name = "zexio_agent"
version = "0.3.1"
edition = "2021"

[[bin]]
name = "zexio"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
axum = { version = "0.7", features = ["macros", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls"] }
trust-dns-resolver = "0.23"
hmac = "0.12"
sha2 = "0.10"
aes-gcm = "0.10"
hkdf = "0.12"
rand = "0.8"
hex = "0.4"
hostname = "0.4"
config = "0.14"
tokio-stream = { version = "0.1", features = ["net", "io-util"] }
futures = "0.3"
futures-util = "0.3"
async-stream = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sysinfo = "0.30"
anyhow = "1.0"
thiserror = "1.0"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
hyper-util = { version = "0.1", features = ["full"] }
hyper = { version = "1.0", features = ["full"] }
tower = "0.4"
zip = "0.6"
base64 = "0.22"
uuid = { version = "1.8", features = ["v4", "serde"] }
crc32fast = "1.3"
chrono = { version = "0.4", features = ["serde"] }
redis = { version = "0.25", features = ["tokio-comp"] }
jsonwebtoken = "9.2"
validator = { version = "0.16", features = ["derive"] }
pingora = { version = "0.6", features = ["proxy", "lb"] }
clap = { version = "4.4", features = ["derive", "env"] }
dotenvy = "0.15"
colored = "2.0"
url = "2.5"
dirs = "5.0"
libc = "0.2"
async-trait = "0.1"

# gRPC
tonic = "0.11"
prost = "0.12"
prost-types = "0.12"

[build-dependencies]
tonic-build = "0.11"
protobuf-src = "1.1"

[lints]
workspace = true
